fix: toastify z-index issue

--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@
   width: 20vw;
   padding: 1rem;
   border-radius: 1rem;
+  z-index: 99;
 }
 
 .toast-error {
@@ -33,6 +34,7 @@
   width: 20vw;
   padding: 1rem;
   border-radius: 1rem;
+  z-index: 99;
 }
 
 .error-page {
@@ -117,7 +119,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 1rem 2rem;
-  z-index: 99999;
+  z-index: 9;
 }
 .welcomenav .welcomenav-btns {
   display: flex;
