--- a/src/sass/general/_welcomenav.scss
+++ b/src/sass/general/_welcomenav.scss
@@ -12,7 +12,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 1rem 2rem;
-  z-index: 99999;
+  z-index: 9;
 
   .welcomenav-btns {
     display: flex;
